--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Liars Dice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="" />
-    <script src=""></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     <h1>Liars Dice</h1>
     <p>Multiplayer game using socket.io</p>
+    <script src="/static/game.js"></script>
 </body>
 </html>
