Connecting players added to Game player list

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <h1>Liars Dice</h1>
     <p>Multiplayer game using socket.io</p>
-    <script src="/static/game.js"></script>
+    <script src="/static/client.js"></script>
 </body>
 </html>
