Players can connect with a name

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <h1>Liars Dice</h1>
     <p>Multiplayer game using socket.io</p>
+    <div>
+        Username:
+        <input type="text" id="username">
+        <button onclick="connectPlayer()">Submit name</button>
+    </div>
     <script src="/static/client.js"></script>
 </body>
 </html>
