Clients can see a list of logged in players

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <input type="text" id="username">
         <button onclick="connectPlayer()">Submit name</button>
     </div>
+    <div>
+        <h2>Players connected</h2>
+        <ul id="player-list">
+        </ul>
+    </div>
     <script src="/static/client.js"></script>
 </body>
 </html>
