Player name replaces name input

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>Liars Dice</h1>
     <p>Multiplayer game using socket.io</p>
-    <div class="username-submission-field">
+    <div id="username-div">
         Username:
-        <input type="text" id="username">
+        <input type="text" id="username-field">
         <button onclick="connectPlayer()">Submit name</button>
     </div>
     <div class="players-connected">
