--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul id="player-list">
         </ul>
     </div>
-    <div class="turn-action">
+    <div id="turn-action-div" hidden>
         <button id="raise-button" onclick="raise()" disabled>Raise</button>
         <button id="call-lie-button">Call lie</button>
     </div>
