Generates and displays dice rolls

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="text" id="username-field">
         <button onclick="connectPlayer()">Submit name</button>
     </div>
+    <p>Each player begins with 5 dice. During a player's turn, they can either raise the bid or call out the previous players bid. The bid represents how many dice of a certain face value the bidder claims there must be. Raising a bid requires raising the face and/or quantity of bid.</p>
     <div class="players-connected">
         <h2>Players connected</h2>
         <ul id="player-list">
