Players can call others on their lie

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </select>
         <br>
         <button id="raise-button" onclick="raise()" disabled>Raise</button>
-        <button id="call-lie-button">Call lie</button>
+        <button id="call-lie-button" onclick="lie()">Call lie</button>
     </div>
     <script src="/static/client.js"></script>
 </body>
