Displays most recent bid

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h2>Players connected</h2>
         <ul id="player-list">
         </ul>
+        <p id="recent-action"></p>
     </div>
     <div id="turn-action-div" hidden>
         Bid Quantity: <input type="number" id="bid-amount"><br>
