Dice are revealed between rounds

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </select>
         <br>
         <button id="raise-button" onclick="raise()" disabled>Raise</button>
-        <button id="call-lie-button" onclick="lie()">Call lie</button>
+        <button id="call-lie-button" onclick="lie()">Call lie</button><br>
+        <button id="begin-next-round" onclick="requestNextRound()" hidden>Begin Next Round</button>
     </div>
     <script src="/static/client.js"></script>
 </body>
