--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
             <button id="begin-next-round" onclick="requestNextRound()" hidden>Begin Next Round</button>
         </div>
         <div class="events">
+            <h2>Events</h2>
             <ul class="event-list" id="event-list">
     
             </ul>
+        </div>
+        <div class="chat">
+            <h2>Chat:</h2>
+            <ul class="chat-list" id="chat-list">
+
+            </ul>
+            <input type="text" id="chat-message" disabled>
         </div>
     </div>
     
