--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Enter Game</h2>
             Username:
             <input type="text" id="username-field"><br>
-            <button onclick="connectPlayer()">Submit name</button>
+            <button class="big-button" onclick="connectPlayer()">Submit name</button>
         </div>
         <div class="players-connected">
             <h2>Players</h2>
@@ -44,9 +44,9 @@
                 <option value="6">6</option>
             </select>
             </p>
-            <button id="raise-button" onclick="raise()" disabled>Raise</button>
-            <button id="call-lie-button" onclick="lie()">Call lie</button><br>
-            <button id="begin-next-round" onclick="requestNextRound()" hidden>Begin Next Round</button>
+            <button class="big-button" id="raise-button" onclick="raise()" disabled>Raise</button>
+            <button class="big-button" id="call-lie-button" onclick="lie()">Call lie</button><br>
+            <button class="big-button" id="begin-next-round" onclick="requestNextRound()" hidden>Begin Next Round</button>
         </div>
         <div class="events">
             <h2>Events</h2>
@@ -55,11 +55,14 @@
             </ul>
         </div>
         <div class="chat">
-            <h2>Chat:</h2>
+            <h2>Chat</h2>
             <ul class="chat-list" id="chat-list">
 
             </ul>
-            <input type="text" id="chat-message" disabled>
+            <div class="chat-bar">
+                <input type="text" id="chat-message" placeholder="Type to chat" disabled>
+                <button id="send-chat-button" onclick="sendChatMessage()" disabled>Send</button>
+            </div>
         </div>
     </div>
     
