--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h2>Actions:</h2>
             <div id="place_bid" hidden>
                 <p>Bid Quantity: <input type="number" id="bid-amount"></p>
+                <p id="helper-text" class="helper-text"></p>
                 <p>Bid Face: 
                 <select id="bid-face">
                     <option value="1">1</option>
