Bids now displayed

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <br>
                 <p id="player-roll"></p>
                 <p id="turn-indicator"></p>
+                <p id="bid-indicator"></p>
             </div>
             <div class="turn-action" id="turn-action-div" hidden>
                 <h2>Actions</h2>
